--- a/src/components/Homepage/homecss/homeslider.css
+++ b/src/components/Homepage/homecss/homeslider.css
@@ -1,4 +1,4 @@
-.homePageSlider{background-image: url('https://f.shgcdn.com/f42431a0-bd0a-4a6e-8cfd-152d59dabd22/');}
+.homePageSlider{background: url('https://f.shgcdn.com/f42431a0-bd0a-4a6e-8cfd-152d59dabd22/');}
 
 .bigButton {
     background: #fff;
