--- a/src/components/Homepage/homecss/homeslider.css
+++ b/src/components/Homepage/homecss/homeslider.css
@@ -1,4 +1,4 @@
-.homePageSlider{background: url('https://f.shgcdn.com/f42431a0-bd0a-4a6e-8cfd-152d59dabd22/');}
+.homePageSlider{background: url('https://cdn.shopify.com/s/files/1/0257/7583/3137/files/bck-20210219-sacheau-zoe-ayla-375_web_1800x.jpg');}
 
 .bigButton {
     background: #fff;
