--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@ body {
     color: #455;
     line-height: 1.5;
     font-family: "Muli", sans-serif;
-    background-color: blueviolet;
-    background-image: url('https://eatit.netlify.app/static/media/bg.e02a0393.png');
+    /* background-color: blueviolet; */
+    /* background-image: url('https://eatit.netlify.app/static/media/bg.e02a0393.png'); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
