--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@ body {
     color: #455;
     line-height: 1.5;
     font-family: "Muli", sans-serif;
-    /* background-color: blueviolet; */
-    /* background-image: url('https://eatit.netlify.app/static/media/bg.e02a0393.png'); */
+    background-color: blueviolet;
+    background-image: url('https://eatit.netlify.app/static/media/bg.e02a0393.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
@@ -133,4 +133,15 @@ main .wrapper {
     border-radius: 10px;
     padding: 15px;
     color: #ccf381;
+}
+
+.usercard {
+    padding: 20px;
+}
+
+.cards {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    background: #fff;
+    padding: 10px;
+    margin: 10px;
 }
