--- a/src/pages/PDP.css
+++ b/src/pages/PDP.css
@@ -69,6 +69,10 @@ body {
     padding: 0 0 5px;
 }
 
+.productImage .productImg {
+    align-items: flex-start;
+}
+
 .accordion-content ul li::before {
     content: '';
     display: inline-block;
@@ -100,6 +104,9 @@ body {
 .infoAccordion {
     border-top: 1px solid #B5B5B5;
     margin-top: 35px;
+    margin-left: 0;
+    max-width: 100%;
+    padding-right: 0;
 }
 
 .klarnaText {
